--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,8 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:fishying/fishying.github.io.git
+  branch: master
+  name: yiiu
+  email: yu.gintoki@gmail.com
